sources/nginx/nginx.service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: nginx
