sources/nginx/nginx.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.k3s.local
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path:
